# nextjs-django-boilerplate

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  commitlint.config.js  commitlint.config.ts  eslint.config.mjs  lint-staged.config.ts  package.json  proxy.ts
.cursor/rules/: nextjs.mdc
.husky/: pre-commit  pre-push
APIDocs/: bruno.json  collection.bru
APIDocs/auth/: Foce Change Password.bru  Login.bru  Refresh.bru  Verify OTP.bru
actions/auth/: changePasswordAction.ts  (+4 more)
app/: layout.tsx  prodivers.tsx
lib/: api-client.ts  api-public.ts  auth-api.ts  cookies.ts  deviceInfo.ts  getSession.ts  refresh.ts  sessionConfig.ts  verification.ts
server/: .pre-commit-config.yaml  pyproject.toml
server/app/: celery.py  middlewares.py  settings.py  urls.py
server/misc/: models.py
server/misc/migrations/: 0001_initial.py
server/two_factor/: models.py  serializers.py  urls.py  views.py
server/two_factor/migrations/: 0001_initial.py  0002_initial.py  0003_alter_trusteddevice_ip_address.py
server/users/: models.py  serializers.py  urls.py  views.py
server/users/migrations/: 0001_initial.py
server/users/serializers/: user_serializer.py
server/users/services/: auth_service.py  change_password.py  credential_service.py  otp_service.py  status_service.py  trusted_device_service.py  user_lookup_service.py  users_services.py
server/users/views/: __init__.py  auth.py  user_crud.py
server/utils/: blocked_ip.py  exception_handler.py  generate_otp.py  ip_detection.py  models_mixin.py  send_email_helper.py  user_agent_parser.py  validate_image.py
(+17 files in other folders)
